--- a/src/main/resources/templates/views/mypage/question-detail.html
+++ b/src/main/resources/templates/views/mypage/question-detail.html
@@ -11,34 +11,38 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
         <div class="main-content">
             <div class="container-main">
 		        <div class="head">
-		            <h1>1:1 문의내역</h1>
+		            <h1>1:1 문의하기</h1>
 		            <button class="list-btn" onclick="window.location.href='/mypage/questions';">목록</button>
 		        </div>
 		        <div class="form-container">
-			        <form>
+			        <form action="/mypage/questions/detail" method="post">
+			        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			        <input type="hidden" name="userId" th:value="${#authentication.principal.userId}">
 			            <div class="form-group">
 			                <label for="name">이름</label>
-			                <input type="text" id="name" value="김**" readonly>
+			                <span class="span-ex" th:text="${#authentication.principal.name}">이름</span>
 			            </div>
 			            <div class="form-group">
 			                <label for="id">아이디</label>
-			                <input type="email" id="id" value="sks**@naver.com" readonly>
+			                <span class="span-ex" th:text="${#authentication.principal.email}">이메일</span>
 			            </div>
 			            <div class="form-group">
 			                <label for="inquiry-type">문의유형</label>
-			                <select id="inquiry-type" required>
+			                <select class="input" name="qnaType" id="inquiry-type" required>
 			                    <option value="" disabled selected>선택</option>
-			                    <!-- Add more options as needed -->
+			                    <option value="상품">상품</option>
+			                    <option value="배송">배송</option>
+			                    <option value="기타">기타</option>
 			                </select>
 			                <p class="error-message">문의유형을 선택해주세요.</p>
 			            </div>
 			            <div class="form-group">
 			                <label for="subject">제목</label>
-			                <input type="text" id="subject" placeholder="제목을 입력해주세요." required>
+			                <input class="input" type="text" name="title" id="subject" placeholder="제목을 입력해주세요." required>
 			            </div>
 			            <div class="form-group">
 			                <label for="content">내용</label>
-			                <textarea id="content" placeholder="궁금한 사항을 입력해주세요." required></textarea>
+			                <textarea class="input" id="content" name="content"  placeholder="궁금한 사항을 입력해주세요." required></textarea>
 			            </div>
 			            <p class="note">※ 온라인 상담을 통한 전화 상담요청은 불가하오니 양해하여 주시기 바랍니다.</p>
 			            <button type="submit" class="submit-button">제출</button>
