--- a/src/main/resources/templates/views/mypage/question.html
+++ b/src/main/resources/templates/views/mypage/question.html
@@ -28,7 +28,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		                        <th>상태</th>
 		                    </tr>
 		                    <tr th:each="dto : ${list}">
-		                        <td th:text="${dto.title}">제목</td>
+		                        <td><a th:text="${dto.title}" th:href="|/mypage/questions/${dto.qnaNum}|">제목</a></td>
 		                        <td th:text="${dto.date.toLocalDate()}">날짜</td>
 		                        <td th:if="${dto.status==1}" class="status-finish">답변완료</td>
 		                        <td th:if="${dto.status==0}" class="status">답변대기</td>
