--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -48,7 +48,7 @@
         <!-- 간편한 로그인 부분 -->
         <section id="easy-login-wrap">
             <div class="easy-login">
-                <p id="easy-login-text">더욱 간편한 로그인</p>
+                <p id="easy-login-text"></p>
             </div>
             <div id="easy-login-wrap-ko">
                 <div class="easy-login-box">
