--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -87,7 +87,7 @@
 						<div class="signup-input-ssn">
 							<input id="signup-ssn" type="text" name="userRRN"
 								placeholder="******-*******" maxlength="14" required
-								pattern="^\d{6}-\d{7}$" title="형식: 123456-1234567">
+								pattern="^\d{6}-[1-4]\d{6}$" title="형식: 123456-1234567">
 						</div>
 
 						<div class="phone">
