--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -61,7 +61,7 @@ input {
     display: flex;
     justify-content: space-between;
     width: 440px; /* 전체 너비를 440px로 설정 */
-    margin: 0 auto 20px auto; /* 가운데 정렬 */
+    margin: 0 auto 50px auto; /* 가운데 정렬 */
 }
 
 .login-btn {
@@ -94,7 +94,7 @@ input {
 .login-btn-wrap {
 	height: 52px;
 	line-height: 55px;
-	margin: 0px 10px 8px 10px;
+	margin: 25px 10px 30px 10px;
 	border: solid 1px rgba(0, 0, 0, .1);
 	background-color: #FF9040;
 	color: #fff;
@@ -102,7 +102,7 @@ input {
 }
 /*로그인버튼*/
 #login-btn {
-    width:440px;
+    width:430px;
     height:50px;
 	background-color: #FF9040;
 	border: none;
@@ -148,12 +148,12 @@ input {
 	display: flex;
 	justify-content: center;
 	gap: 20px;
-	margin: 20px 0;
+	margin: 60px 0;
 }
 
 /*카카오 로그인 스타일*/
 .kakao-login-ko {
-	background-color: #FEE500;
+	background-color: #FFFFFF;
 	padding: 10px 20px;
 	border-radius: 5px;
 	width: 400px;
@@ -174,12 +174,12 @@ input {
 }
 
 .kakao-login-ko:hover {
-	background-color: #E4C200;
+	background-color: #f1f1f1;
 }
 
 /*네이버 로그인 스타일*/
 .naver-login-ko {
-	background-color: #03C75A;
+	background-color: #FFFFFF;
 	padding: 10px 20px;
 	border-radius: 5px;
 	width: 400px;
@@ -193,14 +193,14 @@ input {
 }
 
 .naver-login-ko a {
-	color: #FFFFFF; /* 흰색 텍스트 */
+	color: #3C1E1E; /* 흰색 텍스트 */
 	font-weight: bold;
 	font-size: 14px;
 	text-decoration: none;
 }
 
 .naver-login-ko:hover {
-	background-color: #029B48; /* 호버 시 어두운 녹색 */
+	background-color: #f1f1f1; /* 호버 시 어두운 녹색 */
 }
 
 /* 구글 로그인 스타일 */
@@ -211,7 +211,7 @@ input {
     width: 400px;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ddd; /* 흰색 배경에 경계선 추가 (선택 사항) */
+    
 }
 
 .google-login-ko img {
@@ -220,7 +220,7 @@ input {
 }
 
 .google-login-ko a {
-    color: #4285F4; /* 구글 블루 색상 (링크 텍스트) */
+    
     font-weight: bold;
     font-size: 14px;
     text-decoration: none;
