--- a/src/main/resources/templates/views/index/detail.html
+++ b/src/main/resources/templates/views/index/detail.html
@@ -16,8 +16,8 @@
 <body>
 	<main class="container">
 		<div class="book-details">
-			<div class="book-image">
-				<!-- <img th:src="${book.image}" th:alt="${book.title}"> -->
+			<div class="book-image" >
+				<img th:if="${book}" th:src="${book.image}" th:alt="${book.title}">
 			</div>
 			<div class="book-info">
 				<ul class="book-categories">
@@ -25,16 +25,16 @@
 					<li>무료배송</li>
 					<li>베스트셀러</li>
 				</ul>
-				<!-- <h1 class="bookTitle" th:text="${book.title}">책 제목</h1>
-				<p class="book-author" th:text="${book.author + ' 저'}">저자</p>
-				<p class="book-publisher" th:text="${book.publisher}">출판사</p>
-				<p class="book-date" th:text="${book.pubdate}">출판일</p> -->
+				<h1 class="bookTitle" th:if="${book}" th:text="${book.title}">책 제목</h1>
+				<p class="book-author" th:if="${book}" th:text="${book.author + ' 저'}">저자</p>
+				<p class="book-publisher" th:if="${book}" th:text="${book.publisher}">출판사</p>
+				<p class="book-date" th:if="${book}" th:text="${book.pubdate}">출판일</p>
 				<div class="book-rating">
 					<span class="stars">★★★☆☆</span> <span class="review-count">리뷰
 						2개</span>
 				</div>
 				<p class="book-price">
-				<!-- 	<span class="price" th:text="${book.discount + '원'}">할인가</span>  -->
+					<span class="price" th:if="${book}" th:data-price="${book.discount}" th:text="|${#numbers.formatInteger(book.discount,3,'COMMA')} 원|">할인가</span> 
 				</p>
 				<div class="delivery-info">
 					<h3>배송 정보</h3>
@@ -49,8 +49,8 @@
 					<button class="decrease">-</button>
 					<input type="text" value="1" readonly>
 					<button class="increase">+</button>
-					<!-- <span class="total-price" th:text="${book.discount + '원'}">총
-						가격</span> -->
+					<span class="total-price" th:if="${book}" th:text="${book.discount + '원'}">총
+						가격</span>
 				</div>
 				<div class="action-buttons">
 					<button class="add-to-cart">장바구니</button>
@@ -59,15 +59,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="plus">
-			<!-- <img alt="상세 이미지" th:src="@{${book.image}}"> -->
-		</div>
+	
 		<div>
 			<div>
 				<h3>책 소개</h3>
 			</div>
 			<div class="bookContent">
-				<!-- <p th:text="${book.description}">책 설명</p> -->
+				<p th:text="${book.description}">책 설명</p>
 			</div>
 		</div>
 		<div th:replace="~{views/index/review.html}"></div>
