--- a/src/main/resources/templates/views/index/serchBookList.html
+++ b/src/main/resources/templates/views/index/serchBookList.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/mainContent/bookList.js"></script>
+<script src="/js/mainContent/heartButton.js"></script>
 <link rel="stylesheet" href="/css/mainContent/bookList.css" />
 
 
@@ -47,18 +48,22 @@
 							</div>
 							<div class="bookImg">
 								<img th:alt="${book.title}" th:src="${book.image}"
-									name="thumbnail"> <span><a th:href="@{'/detail/' + ${book.isbn}}">새창보기</a></span>
-								<span class="chang"><a th:href="@{'/detail/' + ${book.isbn}}">미리보기</a></span>
+									name="thumbnail"> <span><a
+									th:href="@{'/detail/' + ${book.isbn}}">새창보기</a></span> <span
+									class="chang"><a th:href="@{'/detail/' + ${book.isbn}}">미리보기</a></span>
 							</div>
 							<div class="bookContent">
 								<h3>
-									<a th:href="@{|/detail/${book.isbn}|}" name="title" th:text="${book.title}"></a>
+									<a th:href="@{|/detail/${book.isbn}|}" name="title"
+										th:text="${book.title}"></a>
 								</h3>
 								<h4>
-									<a th:href="@{|/detail/${book.isbn}|}" name="authors" th:text="${book.author}"></a>
+									<a th:href="@{|/detail/${book.isbn}|}" name="authors"
+										th:text="${book.author}"></a>
 								</h4>
 								<!-- <p th:text="${book.isbn}"></p> -->
-								<h5 name="price" th:text="${book.discount != null ? #numbers.formatDecimal(book.discount, 0, 'COMMA', 0, 'POINT') + '원' : '가격 정보 없음'}"></h5>
+								<h5 name="price"
+									th:text="${book.discount != null ? #numbers.formatDecimal(book.discount, 0, 'COMMA', 0, 'POINT') + '원' : '가격 정보 없음'}"></h5>
 								<h6 name="content" th:text="${book.description}"></h6>
 							</div>
 							<div>
@@ -68,9 +73,12 @@
 								</h5>
 							</div>
 							<div class="button-container">
-								<button class="heart-button">
-									<i class="far fa-heart"></i>
-								</button>
+								<form id="favoriteForm" onsubmit="return false;">
+									<!-- 기존 버튼 및 기타 요소들 -->
+									<button type="button" class="heart-button">
+										<i class="far fa-heart"></i>
+									</button>
+								</form>
 								<button class="cart-button">장바구니</button>
 								<button class="buy-button">바로구매</button>
 							</div>
