--- a/src/main/resources/templates/views/mypage/question-form.html
+++ b/src/main/resources/templates/views/mypage/question-form.html
@@ -5,6 +5,11 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	<link rel="stylesheet" href="/css/mypage/sidebar.css">
 	<link rel="stylesheet" href="/css/mypage/question-detail.css">
 	<link rel="stylesheet" href="/css/mypage/question-form.css">
+	<script>
+		function btnDeleteClicked(){
+			return confirm("정말로 삭제하시겠습니까?");
+		}
+	</script>
 </head>
 <main>
 	<div class="flex">
@@ -13,42 +18,44 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
             <div class="container-main">
 		        <div class="head">
 		            <h1>1:1 문의하기</h1>
-		            <form>
+		            <form th:action="|/mypage/questions/${qna.qnaNum}|" onsubmit="return btnDeleteClicked()" method="post">
+		            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+		            	<input type="hidden" name="_method" value="delete">
 			            <button class="list-btn">삭제</button>
-			            <button class="list-btn" onclick="window.location.href='/mypage/questions';">목록</button>
+			            <button type="button" class="list-btn" onclick="window.location.href='/mypage/questions';">목록</button>
 		            </form>
 		        </div>
 		        <div class="box">
 					<div class="form-header">
-						<h2>안녕하세요</h2>
+						<h2 th:text="${qna.title}">안녕하세요</h2>
 						<div class="profile-header">
 							<div class="info-pic">
 							</div>
 							<div class="user-details">
-								<span class="username">이유진</span>
-								<span class="subscription">yujin@naver.com</span>
-								<span class="timestamp">2024.08.10. 15:39 </span>
+								<span class="username" th:text="${#authentication.principal.name}">이름</span>
+								<span class="subscription" th:text="${#authentication.principal.email}">yujin@naver.com</span>
+								<span class="timestamp" th:text="${qna.date.toLocalDate}">2024.08.10. 15:39 </span>
 							</div>
 						</div>
 					</div>
 					<div class="memo">
-						<p>책이 너무 비싸요 값 좀 내려주세요</p>
+						<p th:text="${qna.content}">책이 너무 비싸요 값 좀 내려주세요</p>
 					</div>
 				</div>
-				<div class="box">
+				<div class="box" th:unless="${#lists.isEmpty(answer)}">
 					<div class="form-header">
-						<h2>문의 답변입니다.</h2>
+						<h2 th:text="${answer.title}">문의 답변입니다.</h2>
 						<div class="profile-header">
 							<div class="info-pic">
 							</div>
 							<div class="user-details">
 								<span class="username">관리자</span>
-								<span class="timestamp">2024.08.10. 17:39 </span>
+								<span class="timestamp" th:text="${answer.date.toLocalDate}">2024.08.10. 17:39 </span>
 							</div>
 						</div>
 					</div>
 					<div class="memo">
-						<p>요새 종이 값이 금값입니다.</p>
+						<p th:text="${answer.content}">요새 종이 값이 금값입니다.</p>
 					</div>
 				</div>
 		    </div>
