--- a/src/main/resources/templates/views/mypage/account.html
+++ b/src/main/resources/templates/views/mypage/account.html
@@ -68,7 +68,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 			                    <input type="text" id="sample6_postcode" th:value="${user.postcode}" class="postalcode address" placeholder="우편번호">
 			                    <input type="button" class="find-postalcode" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
 			                    <input type="text" id="sample6_address" th:value="${user.address}" class="address" placeholder="주소"><br>
-								<input type="text" id="sample6_detailAddress" class="address" th:value="${user.detailAddress}" class="detailAddress" placeholder="상세주소"><br>
+								<input type="text" id="sample6_detailAddress" th:value="${user.detailAddress}" class="address" placeholder="상세주소"><br>
 								<input type="text" id="sample6_extraAddress" class="address" th:value="${user.extraAddress}" placeholder="참고항목">
 							</div>
 		                </div>
