--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="/css/admin/commons.css">
-<link rel="stylesheet" href="/css/admin/sidebar.css">
-<script src="/js/admin/sidebar.js"></script>
+
 
 <head>
+	<link rel="stylesheet" href="/css/admin/commons.css">
+	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<script src="/js/admin/commons.js"></script>
+	<script src="/js/admin/sidebar.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Product Management</title>
 
 
 </head>
@@ -74,7 +75,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th><input type="checkbox"></th>
+							<th><input type="checkbox" id="select-item"></th>
 							<th>상품명</th>
 							<th>판매가</th>
 							<th>판매상태</th>
@@ -84,38 +85,38 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>테스트상품 22</td>
 							<td>10,000</td>
 							<td>판매중</td>
 							<td>
 								http://m.ectopsu1607.caf
 								<button>주소복사</button>
-								
+
 							</td>
 							<td>2019-06-14</td>
 						</tr>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>테스트상품 22</td>
 							<td>10,000</td>
 							<td>판매중</td>
 							<td>
 								http://m.ectopsu1607.caf
 								<button>주소복사</button>
-								
+
 							</td>
 							<td>2019-06-14</td>
 						</tr>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>테스트상품 22</td>
 							<td>10,000</td>
 							<td>판매중</td>
 							<td>
 								http://m.ectopsu1607.caf
 								<button>주소복사</button>
-								
+
 							</td>
 							<td>2019-06-14</td>
 						</tr>
