--- a/src/main/resources/templates/views/admin/complain.html
+++ b/src/main/resources/templates/views/admin/complain.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/commons.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -40,7 +41,7 @@
 				<table class="order-table">
 					<thead>
 						<tr>
-							<th><input type="checkbox"></th>
+							<th><input type="checkbox" id="select-all"></th>
 							<th>리뷰번호</th>
 							<th>작성일</th>
 							<th>고객정보</th>
@@ -53,7 +54,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>2</td>
 							<td>2024-08-09</td>
 							<td>이유진<br>
@@ -79,7 +80,7 @@
 
 						</tr>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>1</td>
 							<td>2024-08-09</td>
 							<td>김도영<br>
