--- a/src/main/resources/templates/views/admin/inquiry-list-content.html
+++ b/src/main/resources/templates/views/admin/inquiry-list-content.html
@@ -1,18 +1,19 @@
 <div class="box">
 	<div class="header">
-		<h2>안녕하세요</h2>
+		<h2 th:text="${qna.title}">안녕하세요</h2>
 		<div class="profile-header">
 			<div class="info-pic">
 			</div>
 			<div class="user-details">
-				<span class="username">이유진</span>
-				<span class="id">yujin</span>
-				<span class="subscription">yujin@naver.com</span>
-				<span class="timestamp">2024.08.10. 15:39 </span>
+				<span th:text="${qna.user}" class="username">이유진</span>
+				<span th:if="${qna.status==1}" class="status-finish">답변완료</span>
+					<span th:if="${qna.status==0}" class="status">답변대기</span>
+				<span th:text="${qna.user}" class="subscription">yujin@naver.com</span>
+				<span th:text="${qna.date.toLocalDate()}" class="timestamp"></span>
 			</div>
 		</div>
 	</div>
 	<div class="memo">
-		<p>책이 너무 비싸요 값 좀 내려주세요</p>
+		<p th:text="${qna.content}">책이 너무 비싸요 값 좀 내려주세요</p>
 	</div>
 </div>
