--- a/src/main/resources/templates/views/admin/inquiry-write-content.html
+++ b/src/main/resources/templates/views/admin/inquiry-write-content.html
@@ -1,16 +1,16 @@
 <div class="box">
 	<div class="header">
-		<h2>문의 답변입니다.</h2>
+		<h2 th:text="${detail.title}" ></h2>
 		<div class="profile-header">
 			<div class="info-pic">
 			</div>
 			<div class="user-details">
 				<span class="username">관리자</span>
-				<span class="timestamp">2024.08.10. 17:39 </span>
+				<span th:text="${detail.date.toLocalDate()}" class="timestamp"></span>
 			</div>
 		</div>
 	</div>
 	<div class="memo">
-		<p>요새 종이 값이 금값입니다.</p>
+		<p th:text="${detail.content}"></p>
 	</div>
 </div>
