--- a/src/main/resources/templates/views/admin/promotion.html
+++ b/src/main/resources/templates/views/admin/promotion.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/commons.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -46,7 +47,7 @@
 				<table class="order-table">
 					<thead>
 						<tr>
-							<th><input type="checkbox"></th>
+							<th><input type="checkbox" id="select-item"></th>
 							<th>등록번호</th>
 							<th>제목</th>
 							<th>등록일자</th>
@@ -57,7 +58,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><input type="checkbox"></td>
+							<td><input type="checkbox" class="select-item"></td>
 							<td>1</td>
 							<td>책을 공짜로 얻는 법</td>
 							<td>-</td>
