--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -40,7 +40,7 @@
                 console.error("Error occurred:", error);
                 console.error("Status:", status);
                 console.error("Response:", xhr.responseText);
-                alert("오류가 발생했습니다. 다시 시도해 주세요.");
+                alert("오류가 발생했습니다.");
             }
         });
     }
