--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -33,7 +33,7 @@
                 if (response === "success") {
                     window.location.href = '/signup/admin';
                 } else {
-                    alert("오류가 발생했습니다. 다시 시도해 주세요.");
+                    alert("오류가 발생했습니다.");
                 }
             },
             error: function(xhr, status, error) {
