--- a/src/main/resources/static/css/mainContent/detail.css
+++ b/src/main/resources/static/css/mainContent/detail.css
@@ -127,3 +127,37 @@
 }
 .plus{text-align: center;}
 .bookContent{width: 800px; margin-bottom: 20px; padding: 0 8px;}
+
+.action-buttons {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.action-button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.cart-button {
+    background-color: #FF9040;
+    color: white;
+}
+
+.buy-now {
+    background-color: #FF9040;
+    color: white;
+}
+
+.add-to-wishlist {
+    background-color: #f0f0f0;
+    color: white;
+}
+
+.cart-form {
+    margin: 0;
+}
+.total-price{margin-left: 10px;}
