--- a/src/main/resources/templates/views/index/detail.html
+++ b/src/main/resources/templates/views/index/detail.html
@@ -11,12 +11,15 @@
 <link rel="stylesheet" href="/css/mainContent/review.css" />
 <script src="/js/mainContent/review.js"></script>
 <script src="/js/mainContent/detail.js"></script>
+<script src="/js/mainContent/cartItemButton.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="_csrf" th:content="${_csrf.token}" />
+<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 </head>
 <body>
 	<main class="container">
 		<div class="book-details">
-			<div class="book-image" >
+			<div class="book-image">
 				<img th:if="${book}" th:src="${book.image}" th:alt="${book.title}">
 			</div>
 			<div class="book-info">
@@ -25,16 +28,21 @@
 					<li>무료배송</li>
 					<li>베스트셀러</li>
 				</ul>
-				<h1 class="bookTitle" th:if="${book}" th:text="${book.title}">책 제목</h1>
-				<p class="book-author" th:if="${book}" th:text="${book.author + ' 저'}">저자</p>
-				<p class="book-publisher" th:if="${book}" th:text="${book.publisher}">출판사</p>
+				<h1 class="bookTitle" th:if="${book}" th:text="${book.title}">책
+					제목</h1>
+				<p class="book-author" th:if="${book}"
+					th:text="${book.author + ' 저'}">저자</p>
+				<p class="book-publisher" th:if="${book}"
+					th:text="${book.publisher}">출판사</p>
 				<p class="book-date" th:if="${book}" th:text="${book.pubdate}">출판일</p>
 				<div class="book-rating">
 					<span class="stars">★★★☆☆</span> <span class="review-count">리뷰
 						2개</span>
 				</div>
 				<p class="book-price">
-					<span class="price" th:if="${book}" th:data-price="${book.discount}" th:text="|${#numbers.formatInteger(book.discount,3,'COMMA')} 원|">할인가</span> 
+					<span class="price" th:if="${book}"
+						th:data-price="${book.discount}"
+						th:text="|${#numbers.formatInteger(book.discount,3,'COMMA')} 원|">할인가</span>
 				</p>
 				<div class="delivery-info">
 					<h3>배송 정보</h3>
@@ -49,17 +57,21 @@
 					<button class="decrease">-</button>
 					<input type="text" value="1" readonly>
 					<button class="increase">+</button>
-					<span class="total-price" th:if="${book}" th:text="${book.discount + '원'}">총
-						가격</span>
+					<span class="total-price" th:if="${book}"
+						th:text="${book.discount + '원'}">총 가격</span>
 				</div>
 				<div class="action-buttons">
-					<button class="add-to-cart">장바구니</button>
-					<button class="buy-now">바로구매</button>
-					<button class="add-to-wishlist">알림신청</button>
+					<form th:action="@{/api/books/cartItem}" method="post"
+						class="cart-form" onsubmit="return addToCartItems(this,event)">
+						<input type="hidden" name="isbn" th:value="${book.isbn}" />
+						<button type="submit" class="action-button cart-button">장바구니</button>
+					</form>
+					<button class="action-button buy-now">바로구매</button>
+					<button class="action-button add-to-wishlist">알림신청</button>
 				</div>
 			</div>
 		</div>
-	
+
 		<div>
 			<div>
 				<h3>책 소개</h3>
