--- a/src/main/resources/templates/views/index/serchBookList.html
+++ b/src/main/resources/templates/views/index/serchBookList.html
@@ -6,6 +6,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/mainContent/bookList.js"></script>
 <script src="/js/mainContent/heartButton.js"></script>
+<script src="/js/mainContent/cartItemButton.js"></script>
 <link rel="stylesheet" href="/css/mainContent/bookList.css" />
 
 <meta name="_csrf" th:content="${_csrf.token}" />
@@ -73,15 +74,16 @@
 								</h5>
 							</div>
 							<div class="button-container">
-								<form th:action="@{/api/books/favorite}" method="post"
-									class="favorite-form"
-									onsubmit="return addToFavorites(this, event)">
+								<form th:action="@{/api/books/favorite}" method="post" class="favorite-form" onsubmit="return addToFavorites(this, event)">
 									<input type="hidden" name="isbn" th:value="${book.isbn}" />
 									<button type="submit" class="heart-button">
 										<i class="far fa-heart"></i>
 									</button>
 								</form>
-								<button class="cart-button">장바구니</button>
+								<form th:action="@{/api/books/cartItem}" method="post" class="cart-form" onsubmit="return addToCartItems(this,event)">
+									<input type="hidden" name="isbn" th:value="${book.isbn}" />	
+									<button  type="submit" class="cart-button">장바구니</button>
+								</form>
 								<button class="buy-button">바로구매</button>
 							</div>
 						</li>
