--- a/src/main/resources/templates/views/mypage/account-delete.html
+++ b/src/main/resources/templates/views/mypage/account-delete.html
@@ -4,15 +4,9 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 <head>
 	<link rel="stylesheet" href="/css/mypage/sidebar.css">
 	<link rel="stylesheet" href="/css/mypage/account-delete.css">
-	<script type="text/javascript">
-		function accountDelete(){
-			//비밀번호 일치하는지 확인
-			
-			if(confirm("정말 탈퇴하시겠습니까?\n탈퇴 후 동일 아이디로 재가입이 불가합니다.")){
-				//status를 탈퇴중으로 변경
-			}
-		}
-	</script>
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+	<script src="/js/mypage/account-delete.js"></script>
 </head>
 <main>
 	<div class="flex">
@@ -76,7 +70,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		                <h2>정확한 본인확인을 위해 비밀번호를 다시 한 번 입력해 주세요.</h2>
 		                <div class="form-group">
 		                    <label for="userId">아이디</label>
-		                    <input type="text" id="userId" value="test@test.com" disabled>
+		                    <input type="text" id="userId" th:value="${#authentication.principal.email}" disabled>
 		                </div>
 		                <div class="form-group">
 		                    <label for="password">비밀번호</label>
