--- a/src/main/resources/templates/views/mypage/favorite.html
+++ b/src/main/resources/templates/views/mypage/favorite.html
@@ -39,42 +39,42 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 	</div>
                 	<div class="book-grid">
 				        <div class="book-item">
-				            <img src="image1.jpg">
+				            <img>
 				            <h3>너무나 많은 여름이</h3>
 				            <p>김안수 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image2.jpg">
+				            <img>
 				            <h3>노르웨이의 시간 - 피오르와 디자이...</h3>
 				            <p>신하자 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image3.jpg">
+				            <img>
 				            <h3>바깥은 여름</h3>
 				            <p>김애란 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image4.jpg">
+				            <img>
 				            <h3>어쩌면 스무 번</h3>
 				            <p>권혜영 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image5.jpg">
+				            <img>
 				            <h3>트로피칼 나이트</h3>
 				            <p>조예은 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image6.jpg">
+				            <img>
 				            <h3>락타임, 러브, 좀비 (리커버)</h3>
 				            <p>조예은 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image7.jpg">
+				            <img>
 				            <h3>제품 전시 - 지구최강 사람들이</h3>
 				            <p>제품이 누나 (지은이)</p>
 				        </div>
 				        <div class="book-item">
-				            <img src="image8.jpg">
+				            <img>
 				            <h3>컬티시 - 정신의 언어학</h3>
 				            <p>아만다 몽텔 (지은이), 김다...</p>
 				        </div>
