--- a/src/main/resources/templates/views/login/admin.html
+++ b/src/main/resources/templates/views/login/admin.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
                 <td>2</td>
-                <td>김유자</td>
+                <td>김유장</td>
                 <td>kim@example.com</td>
                 <td>010-2345-6789</td>
                 <td>2023-02-20</td>
