--- a/src/main/resources/static/css/cart/cart-list.css
+++ b/src/main/resources/static/css/cart/cart-list.css
@@ -1,3 +1,7 @@
+/* body{
+	white-space: nowrap;
+} */
+
 h1 {
     text-align: center;
     margin-bottom: 20px;
@@ -45,6 +49,7 @@ h1 {
 
 /* left-section */
 .left-section {
+	white-space: nowrap;
     margin: 40px;
     width: 100%;
 }
@@ -55,6 +60,13 @@ h1 {
 .left-section th, .left-section td {
     padding: 15px;
     text-align: center;
+}
+
+/* tr > td:nth-child(2){
+	width: 500px;
+} */
+.book-info-text{
+	width: 500px;
 }
 
 .product-info {
@@ -70,6 +82,7 @@ h1 {
 .book-info {
     text-align: left;
     padding-left: 10px;
+    /* width: 100%; */
 }
 
 .book-info p {
