--- a/src/main/resources/templates/views/cart/cart-list.html
+++ b/src/main/resources/templates/views/cart/cart-list.html
@@ -3,6 +3,9 @@
 th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 <head>
 	<link rel="stylesheet" href="/css/cart/cart-list.css">
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+	<script src="/js/cart/cart-list.js"></script>
 </head>
 <main>
 	<div th:with="totalAmount=0">
@@ -49,10 +52,10 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	                    <td th:text="|${cartDetail.cartCnt}개|">1개</td>
 	                    <td th:text="|${#numbers.formatDecimal(itemAmount, 0, 'COMMA', 0, 'NONE')}원|">17,000원</td>
 	                    <td>
-	                        <form action="/" class="buy-buttons">
+	                        <form class="buy-buttons">
 	                            <button class="btn" onclick="window.location.href='/payment';">바로 구매</button>
 	                            <button class="btn">수량 변경</button>
-	                            <button class="btn delete">삭제</button>
+	                            <button class="btn delete" th:onclick="|deleteCartItem(${cartDetail.cartDetailNum});|">삭제</button>
 	                        </form>
 	                    </td>
 	                </tr>
@@ -61,17 +64,18 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	        </table>
 	        
 	        <div class="payment-summary">
-			    <p><span>상품 금액</span> <span class="price">19,800원</span></p>
-			    <p><span>배송비</span> <span class="price">0원</span></p>
-			    <p><span>상품 할인</span> <span class="price">-1,980원</span></p>
-			    <p><span>쿠폰 할인</span> <span class="price">0원</span></p>
+			    <p><span>상품 금액</span> <span class="price all-price">19,800원</span></p>
+			    <p><span>배송비</span> <span class="price">3000 원</span></p>
+			    <p><span>상품 할인</span> <span class="price">- 0 원</span></p>
+			    <p><span>쿠폰 할인</span> <span class="price">- 0 원</span></p>
 			    <hr>
-			    <p>최종 결제 금액 <span class="final-amount" th:text="|${#numbers.formatDecimal(totalAmount, 0, 'COMMA', 0, 'NONE')}원|">17,820원</span></p>
+			    <p>최종 결제 금액 <span class="final-amount">17,820원</span></p>
 			    <button class="side-btn" onclick="window.location.href='/';">쇼핑하러가기</button>
             	<button class="side-btn" onclick="window.location.href='/payment';">선택상품 구매</button>
             	<button class="side-btn btn-active" onclick="window.location.href='/payment';">전체상품 구매</button>
 			</div>
 	    </div>
     </div>
+    
 </main>
 </html>
